--- a/CustomerUI/CustProfile.xaml
+++ b/CustomerUI/CustProfile.xaml
@@ -6,29 +6,56 @@
              xmlns:local="clr-namespace:CustomerUI"
              mc:Ignorable="d" 
              d:DesignHeight="485" d:DesignWidth="697">
+    <UserControl.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Name="border" Background="#00695C"  CornerRadius="8" BorderThickness="0">
+                            <ContentPresenter x:Name="cp" Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center" TextBlock.Foreground="White"></ContentPresenter>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter TargetName="border" Property="Background" Value="#E0F2F1"></Setter>
+                                <Setter TargetName="cp" Property="TextBlock.Foreground" Value="Gray"></Setter>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="#004D40"></Setter>
+                                <Setter TargetName="cp" Property="TextBlock.Foreground" Value="White"></Setter>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="#FF179182"></Setter>
+                                <Setter TargetName="cp" Property="TextBlock.Foreground" Value="White"></Setter>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
     <Grid>
-        <Label Content="Full Name:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <Label Content="Phone Number:" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top"/>
-        <Label Name="lblNatID" Content="National ID:" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top"/>
-        <Label Name="lblDOB" Content="Date of Birth:" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top"/>
-        <Label Content="Address:" HorizontalAlignment="Left" Margin="10,134,0,0" VerticalAlignment="Top"/>
-        <Label Content="City:" HorizontalAlignment="Left" Margin="10,165,0,0" VerticalAlignment="Top"/>
-        <Label Content="Province/State:" HorizontalAlignment="Left" Margin="10,196,0,0" VerticalAlignment="Top"/>
-        <Label Content="Country:" HorizontalAlignment="Left" Margin="10,258,0,0" VerticalAlignment="Top"/>
-        <Label Content="Email:" HorizontalAlignment="Left" Margin="10,289,0,0" VerticalAlignment="Top"/>
-        <TextBox Name="tbFullName" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="116,14,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
+        <Label Content="Full Name:" HorizontalAlignment="Left" Margin="40,38,0,0" VerticalAlignment="Top"/>
+        <Label Content="Phone Number:" HorizontalAlignment="Left" Margin="40,69,0,0" VerticalAlignment="Top"/>
+        <Label Name="lblNatID" Content="National ID:" HorizontalAlignment="Left" Margin="40,100,0,0" VerticalAlignment="Top"/>
+        <Label Name="lblDOB" Content="Date of Birth:" HorizontalAlignment="Left" Margin="40,131,0,0" VerticalAlignment="Top"/>
+        <Label Content="Address:" HorizontalAlignment="Left" Margin="40,162,0,0" VerticalAlignment="Top"/>
+        <Label Content="City:" HorizontalAlignment="Left" Margin="40,193,0,0" VerticalAlignment="Top"/>
+        <Label Content="Province/State:" HorizontalAlignment="Left" Margin="40,224,0,0" VerticalAlignment="Top"/>
+        <Label Content="Country:" HorizontalAlignment="Left" Margin="40,286,0,0" VerticalAlignment="Top"/>
+        <Label Content="Email:" HorizontalAlignment="Left" Margin="40,317,0,0" VerticalAlignment="Top"/>
+        <TextBox Name="tbFullName" Background="azure" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="146,42,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
         <Label Name="lblCompanyName" Content="Company Name:" Visibility="Hidden" HorizontalAlignment="Left" Margin="10,320,0,0" VerticalAlignment="Top"/>
-        <Button Name="btUpdate" Click="btUpdate_Click" Content="Update Contact Info" HorizontalAlignment="Left" Margin="10,357,0,0" VerticalAlignment="Top" Width="136"/>
-        <TextBox Name="tbPhoneNo" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="116,45,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
-        <TextBox Name="tbNationalID" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="116,76,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
-        <TextBox Name="tbDOB" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="116,107,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
-        <TextBox Name="tbAddress" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="116,138,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
-        <TextBox Name="tbCity" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="116,169,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
-        <TextBox Name="tbProvinceState" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="116,200,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
-        <Label Content="Postal Code:" HorizontalAlignment="Left" Margin="10,227,0,0" VerticalAlignment="Top"/>
-        <TextBox Name="tbPostalCode" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="116,231,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
-        <TextBox Name="tbCountry" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="116,262,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
-        <TextBox Name="tbEmail" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="116,293,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
+        <Button Name="btUpdate" Click="btUpdate_Click" Content="Update Contact Info" HorizontalAlignment="Left" Margin="183,385,0,0" VerticalAlignment="Top" Width="150" Height="34"/>
+        <TextBox Name="tbPhoneNo" Background="azure" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="146,73,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
+        <TextBox Name="tbNationalID" Background="Azure" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="146,104,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
+        <TextBox Name="tbDOB" Background="azure" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="146,135,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
+        <TextBox Name="tbAddress" Background="azure" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="146,166,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
+        <TextBox Name="tbCity" Background="Azure" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="146,197,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
+        <TextBox Name="tbProvinceState" Background="Azure" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="146,228,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
+        <Label Content="Postal Code:" HorizontalAlignment="Left" Margin="40,255,0,0" VerticalAlignment="Top"/>
+        <TextBox Name="tbPostalCode" Background="Azure" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="146,259,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
+        <TextBox Name="tbCountry" Background="azure" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="146,290,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
+        <TextBox Name="tbEmail" Background="azure" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="146,321,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
         <TextBox Name="tbCompanyName" FontWeight="Bold" FontStyle="Italic" IsEnabled="False" Visibility="Hidden" HorizontalAlignment="Left" Height="23" Margin="116,324,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
     </Grid>
 </UserControl>
