--- a/CustomerUI/EmailDialog.xaml
+++ b/CustomerUI/EmailDialog.xaml
@@ -5,12 +5,40 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CustomerUI"
         mc:Ignorable="d"
-        Title="EmailDialog" Height="216" Width="415">
+        Title="EmailDialog" Height="216" Width="415" Background="#e6ebea" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Name="border" Background="#00695C"  CornerRadius="8" BorderThickness="0">
+                            <ContentPresenter x:Name="cp" Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center" TextBlock.Foreground="White"></ContentPresenter>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter TargetName="border" Property="Background" Value="#E0F2F1"></Setter>
+                                <Setter TargetName="cp" Property="TextBlock.Foreground" Value="Gray"></Setter>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="#004D40"></Setter>
+                                <Setter TargetName="cp" Property="TextBlock.Foreground" Value="White"></Setter>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="#FF179182"></Setter>
+                                <Setter TargetName="cp" Property="TextBlock.Foreground" Value="White"></Setter>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
     <Grid>
-        <Label Content="Enter e-mail address for receipt to be sent:" HorizontalAlignment="Left" Margin="90,49,0,0" VerticalAlignment="Top"/>
-        <TextBox Name="tbEmail" HorizontalAlignment="Left" Height="23" Margin="90,89,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="235"/>
-        <Button Click="btSendReceipt_Click" Name="btSendReceipt" Content="Send receipt" IsDefault="True" HorizontalAlignment="Left" Margin="130,141,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Content="Cancel" IsCancel="True" HorizontalAlignment="Left" Margin="221,141,0,0" VerticalAlignment="Top" Width="75"/>
+        <Label Content="Enter e-mail address to send receipt:" HorizontalAlignment="Left" Margin="139,40,0,0" VerticalAlignment="Top"/>
+        <TextBox Name="tbEmail" HorizontalAlignment="Left" Height="23" Margin="139,80,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="197"/>
+        <Button Click="btSendReceipt_Click" Name="btSendReceipt" Content="Send receipt" IsDefault="True" HorizontalAlignment="Left" Margin="241,138,0,0" VerticalAlignment="Top" Width="78" Height="26"/>
+        <Button Content="Cancel" IsCancel="True" HorizontalAlignment="Left" Margin="148,138,0,0" VerticalAlignment="Top" Width="78" Height="26"/>
+        <Image HorizontalAlignment="Left" Height="52" Margin="37,67,0,0" Source="/SharedCode;Component/Images/email.png"  VerticalAlignment="Top" Width="61"/>
 
     </Grid>
 </Window>
